RegressionTests/TestSuiteExport/reject/inline_asm_invalid_binding_syntax.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmInvalidBindingSyntax

fn f() void {
    var x: u32 = 0;
    asm {
        MOV {x, #1
    };
}
